reports/transient_detection.log
Traceback (most recent call last):
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\zimme\miniconda3\envs\tf\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\zimme\miniconda3\envs\tf\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def pageTest1(zz,th,bb,aa,nt):
    ee=0*zz
    dd=0*zz
    nn=0*zz
    sn=0*zz

    no=np.mean(zz[:100],0)
    nn[0]=no
    #
    sn[0]=zz[0]/nn[0]
    #
    ndat=len(zz)
    
    it=0
    for ii in range(1,ndat):
        sn[ii]=zz[ii]/nn[ii-1]
        ee[ii]= ee[ii-1]+(sn[ii]-bb)
        if ((ee[ii]>th) and(ii-it<nt):
            ee[it:ii]=th
            dd[it:ii]=1
        if (ee[ii]<0):
            ee[ii]=0
            nn[ii]=nn[ii-1]+aa*(zz[ii]-nn[ii-1])
            it=ii
        else:
            nn[ii]=nn[ii-1]
                
    return dd,nn

------------------

[1;36m  Input [1;32mIn [8][1;36m[0m
[1;33m    if ((ee[ii]>th) and(ii-it<nt):[0m
[1;37m                                 ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (1098984524.py, line 18)

